Remove mmapfs for index level enc (#43)
Signed-off-by: Gulshan <kumargu@amazon.com>